@@ -10,8 +10,11 @@ readsb (4.0.0~dev) UNRELEASED; urgency=medium
   * Fixed latest statistics.
   * Storing and exchanging aircraft meta data using Protocol Buffer.
   * Webapp: History loading and trace collection moved to background worker.
+  * Add tracked positions to stats.
+  * Use only single range histogram buffer.
+  * Add and generate maximum polar range with --stats-range option enabled.
 
- -- Michael Wolf <michael@mictronics.de>  Sat, 01 Feb 2020 14:49:17 +0200
+ -- Michael Wolf <michael@mictronics.de>  Sun, 02 Feb 2020 20:39:21 +0200
 
 readsb (3.8.1) stable; urgency=medium
 
